# agent-learning

./: .env  .gitignore  README.md  pyproject.toml
agent-learning/: first_agent.py  llm.py  multi-agent.py  output.md  tools_agent.py
langchain/: llm.py
mcp-oauth/openapi-mcp-server/: .gitignore  backend.py  main.py  start.sh
mcp-oauth/openapi-mcp-server/static/: index.html
mcp-proxy/: README.md  cos_server.py  proxy.py  sin_server.py  tan_server.py  test_proxy.py
mcp-server/first-mcp-server/: proxy.py  weather_server.py
mcp-server/mcp-client/: client_llm.py  client_sse.py  client_stdio.py  weather_server.py
mcp-server/mcp-roots/: client.py  server.py
mcp-server/sampling-mcp-code/: client.py  open-me.ipynb  sample.txt  server.py
mcp-server/sampling-mcp-server/: client-v1.py  client.py  server-v1.py  server.py
mcp-server/travel-mcp-server/: server.py
muiti-agent-a2a/: README.md  client.py  cosine_agent.py  server.py  sine_agent.py  start_agents.py  tangent_agent.py
