[project]
name = "agent-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.95.0",
    "crewai-tools>=0.0.1",
    "dotenv>=0.9.9",
    "fastmcp>=2.9.0",
    "google-search-results>=2.4.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "litellm>=1.73.1",
    "mcp>=1.9.4",
    "python-a2a>=0.5.9",
]
